<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/hola_nice_to_hear_from_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="8"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/let_s_meet_8_at_j_s"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@drawable/chat_background"/>

    <TextView
        android:id="@+id/and_you_too"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hola_nice_to_hear_from_you"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/chat_background"
        android:backgroundTint="@color/grey"
        android:maxEms="8"
        android:padding="15dp"
        android:text="@string/see_you"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/SingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SingIn"
            android:text="@string/name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/SignInName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameText"
            android:background="@drawable/black_border"
            android:inputType="textPersonName"
            android:hint="@string/your_name"
            android:minHeight="48dp"
            android:padding="10dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SignInName"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/SignInEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailText"
            android:background="@drawable/black_border"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email_gmail_com"
            android:minHeight="48dp"
            android:padding="10dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SignInEmailId"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/SignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordText"
            android:background="@drawable/black_border"
            android:ems="10"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:inputType="textPassword"
            android:hint="@string/passs"
            android:minHeight="48dp"
            android:padding="10dp"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/signLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SignInPassword"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignInBtn"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in" />

            <TextView
                android:id="@+id/NotAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/already_have_an_account"
                android:textColor="#2B2B2B"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>