<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ChatActivity">

    <Toolbar
        android:id="@+id/chat_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/chat_activity_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/mainpageback"

            android:layout_gravity="start" />

        <TextView
            android:id="@+id/chat_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textSize="24sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_activity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            app:riv_oval="true"
            android:src="@drawable/main"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" /> <!-- Align to the end (right) -->

    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_activity_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chat_activity_toolbar"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        android:layout_above="@id/chat_edit_text"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/chat_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:autofillHints=""
        android:background="@drawable/black_border"
        android:hint="@string/start_a_new_chat"
        android:padding="15dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/chat_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/send"
        android:background="@drawable/bottom_background"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        app:tint="@color/grey"
        android:contentDescription="@string/tod" />

</RelativeLayout>
