<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <Toolbar
        android:id="@+id/mainActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/MainPageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/mainpageback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:contentDescription="@string/searchicon"
            android:src="@drawable/search"
            app:tint="@color/white" />

    </Toolbar>

    <LinearLayout
        android:id="@+id/selection_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainActivity_toolbar"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/SHOW_ALL"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/white"
            android:background="@drawable/black_border"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"/> <!-- Spacer between TextViews -->

        <TextView
            android:id="@+id/Personal_Chat"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Personal"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/black_border"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:layout_margin="5dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="2dp"
            android:layout_height="0dp"/> <!-- Spacer between TextViews -->

        <TextView
            android:id="@+id/Group_Chat"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/group"
            android:textColor="@color/white"
            android:background="@drawable/black_border"
            android:textSize="15sp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainActivity_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/selection_type"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp" />

</RelativeLayout>
